	  chocolateboy for bringing this to my attention.

	* t/system.t checks to see if exotic system has been injured
	  in the same package as 'use qutodie qw(system)'

	* Calling filename reliably reported in 5.8 error messages
	  and error objects.

	* User subs can be made autodying under 5.8, but they leak
	  over the entire package (which is very bad!)

1.10_05 Sun Jun 15 15:46:38 AUSEST 2008
	* Kludgy support for Perl 5.8 using Scope::Guard and dark
	  and terrible magicks taken from namespace::clean.

	* Rudimentary caching of generated code, to avoid having
	  to regenerate the same code every single time Fatal/autodie
	  is used on the same function.

	* Nuking subroutines at end of lexical scope moved into
	  own subroutine.

	* Perl 5.8 support working!  Backcompat mode not yet
	  supported, nor is autodie with user defined subs.
	  The 5.8 support that is there is rather kludgy, and
	  still needs a lot of work.

	* Perl 5.8 code no longer gets executed under 5.10 when
	  executing write_invocation().

	* lex58.t tells the user that we'll get warnings under
	  Win32, and these are to be ignored.  This is due to
	  a Perl behaviour where it always calls the shell under
	  Win32, even when multi-arg system is used.

	* lex58.t no longer fails to compile on Perl 5.10 which
	  is still clobbering exotic open.  Perl 5.8 does not
	  clobber the exotic form.

	* Backcompat tests are all marked as TODO under perl 5.8

	* Makefile.PL moved back to saying autodie works under 5.8

	* Context/user-sub tests skipped under 5.8, which does
	  not yet support autodying of user subs.

	* lex58 tests now skipped if IPC::System::Simple not installed.

	* Squished a spurious warning from lex58.t

1.10_04 Sat Jun 14 15:02:17 AUSEST 2008
	* Made all $VERSION numbers more friendly to static code
	  analysis tools (including CPAN).
	* Added a test to make sure all version numbers are incremented
	  in lock-step.

	* Started 5.8 support